[package]
name = "shanghai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket]
version = "0.5.0"
features = [
    "json"
]

[dependencies.rocket_db_pools]
version = "0.1.0"
features = [
    "sqlx_sqlite",
    "sqlx_mysql",
    "sqlx_postgres"
]

[dependencies.sqlx]
version = "0.7.3"
features = [
    "chrono",
    "uuid"
]

[dependencies.chrono]
version = "0.4.35"
features = [
    "serde"
]

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
]
[dependencies]
serde = { version = "1.0.197", features = ["derive"] }